--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
                     </div>
                     <div class="md:w-1/2 flex justify-center">
                         <div class="bg-white p-6 rounded-xl shadow-card max-w-xs animate-fade-in" style="animation-delay: 0.5s">
-                            <h4 class="text-lg font-semibold text-primary mb-4 text-center">Data Stunting</h4>
+                            <h4 class="text-lg font-semibold text-primary mb-4 text-center">Data Stunting Desa Sukarame</h4>
                             <canvas id="problemChart" width="300" height="300"></canvas>
                         </div>
                     </div>
@@ -1182,7 +1182,7 @@
             data: {
                 labels: ['Normal', 'Risiko Stunting', 'Stunting'],
                 datasets: [{
-                    data: [32, 10, 8],
+                    data: [360, 120, 80],
                     backgroundColor: [
                         '#10b981',
                         '#f59e0b',
